--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/json2csv": "^5.0.7",
     "@types/node-cron": "^3.0.11",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
+    "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^8.13.2",
     "next": "15.2.5",
     "next-auth": "^4.24.11",
