--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "json2csv": "^6.0.0-alpha.2",
+    "lucide-react": "^0.487.0",
     "mongoose": "^8.13.2",
     "next": "15.2.5",
     "next-auth": "^4.24.11",
