--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.2",
+    "sharp": "^0.34.1",
     "swr": "^2.3.3"
   },
   "devDependencies": {
